# tauri-plugin-graphql-ipc

./: .gitignore  Cargo.toml
src/: async_graphql.rs  juniper.rs  lib.rs
