[package]
edition = "2021"
name = "tauri-plugin-graphql-ipc"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
homepage = "https://github.com/silvanshade/tauri-plugin-graphql-ipc"
repository = "https://github.com/silvanshade/tauri-plugin-graphql-ipc"
keywords = ["async-graphql", "graphql", "juniper", "tauri", "tauri-plugin"]
description = """
A Tauri plugin for type-safe IPC via GraphQL
"""

[features]
graphql-ide = ["async-graphql-warp", "http", "open", "url", "warp"]

[dependencies]
async-graphql = { version = "5.0", default-features = false }
async-graphql-warp = { version = "5.0", default-features = false, optional = true }
http = { version = "0.2", default-features = false, optional = true }
open = { version = "3.2", default-features = false, optional = true }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
tauri = { version = "1.0", default-features = false }
url = { version = "2.3", default-features = false, optional = true }
warp = { version = "0.3", default-features = false, optional = true }
